--- a/style.css
+++ b/style.css
@@ -2,13 +2,19 @@ html {
     font-size: 20px;
     color: rgb(228, 228, 228);
     margin: 0;
+    font-family:Arial, Helvetica, sans-serif;
+
   }
 
 body {
+  background-color: black;
   background-image: url("background.jpg");
   background-attachment: fixed;
   background-position: center;
-  background-size: cover;
+  background-size: 120%, cover, cover;
+  background-position: center, top, bottom;
+  background-repeat: no-repeat;
+  height: 100vh;
   margin: 0;
   overflow: hidden; /* Hide scrollbars */
 }
@@ -23,14 +29,18 @@ li {
     margin-left: 20px;
   }
 
+#under-construction {
+  text-shadow: -2px 2px 5px #00000077;
+  height: 200px;
+  padding-top: 50px;
+}
+
 .info > h1 {
-  font-family:Arial, Helvetica, sans-serif;
   text-shadow: -2px 2px 5px #00000077;
   margin: 50px 0 0 0;
 }
 
 .info > h2 {
-  font-family: Arial, Helvetica, sans-serif;
   text-shadow: -2px 2px 5px #00000077;
   font-size: 16pt;
   margin: 2px 0 0 0;
@@ -49,12 +59,17 @@ li {
   margin: auto;
   max-width: 550px;
   max-height: 260px;
-  background-color: rgba(255, 255, 255, .05);  
+  background-color: rgba(240, 230, 255, .05);  
   backdrop-filter: blur(30px);
   border-radius: 20px;
 
-  transition: transform 0.8s;
+  transition: transform 0.4s;
   transform-style: preserve-3d;
+}
+
+#placeholder-projects {
+  justify-content: center;
+  text-align: center;
 }
 
 /* This container is needed to position the front and back side */
@@ -65,12 +80,13 @@ li {
   width: 100%;
   height: 100%;
   text-align: center;
-  transition: transform 0.8s;
+  transition: transform 0.4s;
   transform-style: preserve-3d;
 }
 
 .rotated {
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 .stuff, .about {
@@ -79,9 +95,7 @@ li {
   height: 100%;
   -webkit-backface-visibility: hidden; /* Safari */
   backface-visibility: hidden;
-}
-
-.stuff {
+  transform: rotateX(0deg);
   display: flex;
   flex-direction: column;
   justify-content: left;
@@ -90,9 +104,13 @@ li {
 }
 
 .about {
-  background-color: dodgerblue;
+  text-align: left;
+}
+
+.about {
   color: white;
   transform: rotateY(180deg);
+  -webkit-transform: rotateY(180deg);
 }
 
 .profileWrap {
@@ -125,7 +143,7 @@ li {
 .buttonBox > a {  
   display:flex;
   flex: 0 1 100%;
-  text-decoration: none;
+  text-decoration:none;
 }
 
 button {
@@ -137,7 +155,8 @@ button {
   border-radius: 10px;
   padding: 2px 2px;
   color: rgb(228, 228, 228);
-
+  padding: 12px;
+  letter-spacing: 0.5px;
 }
 
 
