--- a/style.css
+++ b/style.css
@@ -31,19 +31,20 @@ li {
 
 #under-construction {
   text-shadow: -2px 2px 5px #00000077;
-  height: 200px;
+  height: 220px;
   padding-top: 50px;
 }
 
 .info > h1 {
   text-shadow: -2px 2px 5px #00000077;
-  margin: 50px 0 0 0;
+  margin: 60px 0 0 10px;
+  font-size: 20pt;
 }
 
 .info > h2 {
   text-shadow: -2px 2px 5px #00000077;
   font-size: 16pt;
-  margin: 2px 0 0 0;
+  margin: 0 0 0 10px;
   text-align: left;
 }
 
@@ -57,8 +58,8 @@ li {
   align-items: stretch;
   gap: 4px;
   margin: auto;
-  max-width: 550px;
-  max-height: 260px;
+  max-width: 500px;
+  max-height: 275px;
   background-color: rgba(240, 230, 255, .05);  
   backdrop-filter: blur(30px);
   border-radius: 20px;
@@ -101,10 +102,14 @@ li {
   justify-content: left;
   align-items: stretch;
   flex: 1 1 auto;
+  border-radius: 20px;
+
 }
 
 .about {
   text-align: left;
+  background-color: #000000aa;
+  font-size: 16px;
 }
 
 .about {
@@ -116,13 +121,13 @@ li {
 .profileWrap {
   margin: 5px 0px 0px 5px;
   filter: drop-shadow(-2px 2px 5px #00000077);
-  max-height: 200px;
+  max-height: 220px;
 }
 
 .profile {
   clip-path: inset(5% 5% 5% 5% round 25% 25% 25% 25%);
   max-width: 100%;
-  height: 200px;
+  height: 220px;
 }
 
 .banner {
@@ -131,19 +136,21 @@ li {
   justify-content: flex-start;
   flex: 1 1 auto;
   max-height:min-content;
-  max-height: 200px;
+  max-height: 220px;
 }
 
 .info {
   display:flex;
   flex-direction: column;
   justify-content: flex-start;
+  text-align: left;
 }
 
 .buttonBox > a {  
   display:flex;
   flex: 0 1 100%;
   text-decoration:none;
+  margin: 0 2px;
 }
 
 button {
@@ -171,7 +178,7 @@ button:active {
 
 
 .buttonBox {
-  margin: 0px 12px 8px 12px;
+  margin: 0px 20px 8px 20px;
   gap: 4px;
   display: flex;
   flex: 1 1 auto;
