--- a/style.css
+++ b/style.css
@@ -198,3 +198,40 @@ button:active {
   margin: auto;
   z-index: -1;
 }
+
+#projects-container {
+  position: fixed;
+  inset: 0px;
+  width: 90%;
+  height: 90%;
+  max-width: 100vw;
+  max-height: 100dvh;
+  margin: auto;
+  background-color: #000000aa;  
+  backdrop-filter: blur(30px);
+  border-radius: 20px;
+  overflow:auto;
+}
+
+.projects-page {
+  display:flex;
+  flex-direction: column;
+  align-items: center;
+  margin: 5%;
+}
+
+
+ /* unvisited link */
+a:link {
+  color: lightblue;
+}
+
+/* visited link */
+a:visited {
+  color: lightseagreen;
+}
+
+/* selected link */
+a:active {
+  color: violet;
+} 
